--- a/products/templates/products/quality.html
+++ b/products/templates/products/quality.html
@@ -20,37 +20,22 @@
       
    
   
-      <h1>{% trans 'Качество во главе угла' %}</h1>
-
+      <h1 class="text-center">{% trans 'Качество во главе угла' %}</h1>
+   
    
      <br>
       <div class="row">
 
 
-        <h3><p class="text-left" > {% trans 'Мы очень хорошо осознаем, что продукция должна быть очень качественной. 
-          Поэтому на всех этапах мы отслеживаем качество работ:
+        <h3><p class="text-left" > 
     
-          <p>•	На этапе подготовки файлов к печати мы проверяем их корректность
-          и после проверки высылаем вам на подпись файл в формате pdf.
-          <p>•	В работе мы используем самое передовое полиграфическое оборудование немецкой фирмы HEIDELBERG.
-              <p>•	При печати специальными приборами в автоматическом режиме мы контролируем плотность краски, раскат краски по бумаге, сведение полиграфических крестов.
-                  <p>•	На каждом этапе производства (во время печати и на финишных этапах обработки и отделки) мастер отслеживает качество работ.
-                      <p>•	Мы ориентированы на конечный качественный результат.</p>' %}
+          <p>•   {% trans 'До печати мы проверяем техническую корректность файлов, а после отправляем на подпись, проверенный файл в формате pdf' %}
+          <p>•{% trans '	В работе мы используем самое передовое полиграфическое оборудование немецкой фирмы HEIDELBERG.'%}
+              <p>•{% trans '	При печати специальными приборами в автоматическом режиме мы контролируем плотность краски, раскат краски по бумаге, сведение полиграфических крестов.'%}
+                  <p>•	{% trans 'На каждом этапе производства (во время печати и на финишных этапах обработки и отделки) мастер отслеживает качество работ.'%}
+                      <p>•{% trans '	Мы ориентированы на конечный качественный результат.</p>' %}
       
-      
-<p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a> 
-
-  <a href="/">
  
-      <img src="/media/products/logo_rose.png" width="97" height="65">
- 
-  </a>
-
-<i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
-        <!-- <div class="card"> -->
-         <!-- <div class="card-img">
-          <img align="center" src="images/posts/polit.jpg" class="img-fluid">
-         </div> -->
     
         {% for product in filter.qs %}
       
