--- a/products/templates/products/rest.html
+++ b/products/templates/products/rest.html
@@ -15,10 +15,6 @@
     {% block content %}
 
 
-
-
-
-
                           
    </div>
     
@@ -54,7 +50,7 @@
     
         <li><a href="/products_by_category/16/"> {% trans 'визитные карточки' %}</a></li>
         <li><a href="/products_by_category/1/"> {% trans 'коробки' %}</a></li>
-        <li><a href="/products_by_category/22/"> {% trans 'лента' %}</a></li>
+        <li><a href="/products_by_category/22/">  {% trans 'лента с печатью' %}</a></li>
         <li><a href="/products_by_category/11/"> {% trans 'листовки' %}</a></li>
         <li><a href="/products_by_category/11/"> {% trans 'меню' %}</a></li>
         <li><a href="/products_by_category/14/"> {% trans 'мобильные стенды' %} </a></li>
@@ -65,8 +61,8 @@
         <li><a href="/products_by_category/29/"> {% trans 'плейсметы' %}</a></li> 
         <li><a href="/products_by_category/17/"> {% trans 'приглашения' %}</a></li>
         <li><a href="/products_by_category/14/"> {% trans 'ролл апы' %}</a></li>
-        <li><a href="/products_by_category/23/">  {% trans 'бумажные стаканчики' %}</a></li>
-        <li><a href="/products_by_category/24/"> {% trans 'тейблтенты' %}</a></li>
+        <li><a href="/products_by_category/23/">   {% trans 'стаканчики бумажные' %}</a></li>
+        <li><a href="/products_by_category/24/"> {% trans 'информационные таблички' %}</a></li>
         <li><a href="/products_by_category/11/"> {% trans 'флаеры' %}</a></li>
         <li><a href="/products_by_category/15/"> {% trans 'этикетки' %}</a></li>
   
