--- a/products/templates/products/technologies.html
+++ b/products/templates/products/technologies.html
@@ -5,14 +5,14 @@
     {% load crispy_forms_tags %}
     {% block content %}
     {% load static %}
-
+    {% load i18n %}
 
     <h2 class="text-center"></h2>
 
 
      <br>
 
-    <H1 class="text-center"  >Технологии</H1>
+    <H1 class="text-center"  >{% trans 'Технологии' %}</H1>
     <br>
    
     <style>
