--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -77,12 +77,12 @@
          href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i class="fa fa-{{provider.name}}" id="social_icon"></i>{{provider.name}}</a>
     {% endfor %}
      </ul>
-     <script async src="https://telegram.org/js/telegram-widget.js?15" data-telegram-login="samplebot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
-<script type="text/javascript">
-  function onTelegramAuth(user) {
-    alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
-  }
-</script>
+     <script async src="https://telegram.org/js/telegram-widget.js?15" data-telegram-login="print_005_bot" data-size="medium" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+  <script type="text/javascript">
+    function onTelegramAuth(user) {
+      alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+    }
+  </script>
 
 </div>
 {% endblock %}
