--- a/products/templates/products/support.html
+++ b/products/templates/products/support.html
@@ -8,11 +8,9 @@
     {% load i18n %}
     
     {% load crispy_forms_tags %}
-    
-    
-    
-    
     {% block content %}
+
+    
     
     <h5 class="text-center"><span class="text-muted"></h5></span>
       
@@ -21,15 +19,12 @@
       <H6 STYLE="font-family: 'avenir next rounded std'">
      <div class="container">
       
-   
+    
   
-<h1 class="text-center"> {% trans 'Поддержка и сопровождение на любом этапе' %}</h1> 
+<!-- <h1 class="text-center"> {% trans 'Поддержка и сопровождение на любом этапе' %}</h1> --  >
      <br>
       <div class="row">
-        {% trans 'Мы понимаем, что очень сложно найти тот вариант для себя, который понравится большего всего. Обладая 25-летнем опытом и самым широким спектром технических возможностей, мы готовы вместе с вами найти то единственное решение, которое подходит именно вам. А после того, как мы с вами 
-        создадим то, что будет вас радовать, мы внесем изображение изделия в нужный раздел калькулятора. И в следующий раз вам будем очень удобно рассчитать требуемый тираж и понять сроки изготовления. А возможно, получиться посмотреть на другие идеи и реализации и мгновенно прикинуть их стоимость. У нас вместе получится воспользоваться копилкой полиграфических решений.Просто свяжитесь с нами.'%}
-        {% trans 'Мы понимаем, что очень сложно найти тот вариант для себя, который понравится большего всего. Обладая 25-летнем опытом и самым широким спектром технических возможностей, мы готовы вместе с вами найти то единственное решение, которое подходит именно вам. А после того, как мы с вами 
-        создадим то, что будет вас радовать, мы внесем изображение изделия в нужный раздел калькулятора. И в следующий раз вам будем очень удобно рассчитать требуемый тираж и понять сроки изготовления. А возможно, получиться посмотреть на другие идеи и реализации и мгновенно прикинуть их стоимость. У нас вместе получится воспользоваться копилкой полиграфических решений.Просто свяжитесь с нами.' %} 
+        <h1 class="text-center"> {% trans 'Поддержка эксперта * 25 лет опыта * консультации по любым технологиям и ситуациям * контроль качества ' %}</h1>
 
         <h3><p class="text-left" > 
  <br> <br> <br>
