--- a/products/templates/products/support.html
+++ b/products/templates/products/support.html
@@ -21,7 +21,7 @@
       
     
   
-<!-- <h1 class="text-center"> {% trans 'Поддержка и сопровождение на любом этапе' %}</h1> --  >
+<h1 class="text-center"> {% trans 'Поддержка и сопровождение на любом этапе' %}</h1> 
      <br>
       <div class="row">
         <h1 class="text-center"> {% trans 'Поддержка эксперта * 25 лет опыта * консультации по любым технологиям и ситуациям * контроль качества ' %}</h1>
