--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -158,8 +158,7 @@
 
 <i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
    
-<p class="text-center"><a href="/terms&conditions.html"> {% trans 'условия и положения' %}    &
-<a href="/privacy-policy.html">{% trans 'политика конфиденциальности' %}</a></p>
+<p class="text-center"><a href="/terms&conditions.html"> {% trans 'условия и положения' %}   
 
 
 <p class="text-center">copyright © 2021 . all rights reserved.</p>
