--- a/products/templates/products/delivery.html
+++ b/products/templates/products/delivery.html
@@ -6,7 +6,7 @@
 
 
 
-<h6 class="text-center"><br><br><br><h4>{% trans 'Стоимость доставки расчитывается отдельно и составляет от 400 рублей за груз до 5 кг.' %} (<i class="fas fa-walking"></i>) 
+<h6 class="text-center"><br><br><br>{% trans 'Стоимость доставки расчитывается отдельно и составляет от 400 рублей за груз до 5 кг.' %} (<i class="fas fa-walking"></i>) 
    {% trans 'и от 1500 рублей' %}   (<i class="fas fa-truck"></i>){% trans 'за груз от 5 килограмм в зависимости от веса и расстояния и времени суток по г. Москве. Доставка в другие города рассчитывается согласно тарифам транспортной компании конкретного региона.' %} 
 
 </h4>
