--- a/cart/templates/cart/model_form_upload.html
+++ b/cart/templates/cart/model_form_upload.html
@@ -4,10 +4,12 @@
 
   <form method="post" enctype="multipart/form-data">
     <br>
-    <p class="text-center">  <i class="fas fa-file"></i></p>
-    <p class="text-center">{% trans 'файлы будут проверяться, после проверки вам поступит письмо на электронную почту, которую вы указали при регистрации. Сроки производства не изменятся , если технически файл сделан корректно. Требования к файлам указаны выше' %}</p>
+ 
+    <p class="text-center">{% trans 'файлы <i class="fas fa-file"></i> будут проверяться, после проверки вам поступит письмо на электронную почту, которую вы указали при регистрации. Сроки производства не изменятся , если технически файл сделан корректно. Требования к файлам указаны ниже' %}</p>
    <h5> </i></h4>
  
+    <p class="text-center"><a href="/requirements.html/"><i class="fas fa-file"></i>{% trans 'требования к файлам' %}</a>
+    
 
       {% csrf_token %}
 
@@ -39,7 +41,7 @@
 </center>
 
 
-
+<br>
 
 
 {% endblock %}
