--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -80,7 +80,7 @@
 
 <a href="#" class="tlg-button">
  
- <img src="/media/banner/Pink telegram logo.jpeg" width="45" height="45"> 
+ <img src="/media/banner/tlglogo.jpeg" width="70" height="45"> 
  
   <!-- <img src="/media/banner/tlogo.jpeg" width="45" height="45">-->
 
