--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -53,23 +53,23 @@
   
     
         <li><a href="/products_by_category/2/">{% trans 'блокноты' %}</a></li>
-        <li><a href="/products_by_category/16/">{% trans 'визитки' %}</a></li>
-        <li><a href="/products_by_category/10/">{% trans 'журналы' %}</a></li>
-        <li><a href="/products_by_category/13/">{% trans 'календари' %}</a></li>
-      <li><a href="/products_by_category/5/">{% trans 'книги' %}</a></li>
-      <li><a href="/products_by_category/21/">{% trans 'конверты' %}</a></li>
-      <li><a href="/products_by_category/1/">{% trans 'коробки' %}</a></li>
-      <li><a href="/products_by_category/22/">{% trans 'ленты' %}</a></li>
-      <li><a href="/products_by_category/11/">{% trans 'листовки' %}</a></li>
-      <li><a href="/products_by_category/18/">{% trans 'наклейки' %}</a></li>
-      <li><a href="/products_by_category/20/">{% trans 'пакеты' %}</a></li>
-      <li><a href="/products_by_category/3/">{% trans 'папки' %}</a></li>
-      <li><a href="/products_by_category/7/">{% trans 'подарки' %} </a></li>
-      <li><a href="/products_by_category/12/">{% trans 'постеры' %}</a></li>
-      <li><a href="/products_by_category/17/">{% trans 'приглашения' %}</a></li>
-      <li><a href="/products_by_category/14/">{% trans 'ролл апы' %}</a></li>
-      <li><a href="/products_by_category/25/">{% trans 'плейсметы' %}</a></li>
-      <li><a href="/products_by_category/15/">{% trans 'этикетки' %}</a></li>
+        <li><a href="/products_by_category/16/">{% trans '• визитки' %}</a></li>
+        <li><a href="/products_by_category/10/">{% trans '• журналы' %}</a></li>
+        <li><a href="/products_by_category/13/">{% trans '• календари' %}</a></li>
+      <li><a href="/products_by_category/5/">{% trans '• книги' %}</a></li>
+      <li><a href="/products_by_category/21/">{% trans '• конверты' %}</a></li>
+      <li><a href="/products_by_category/1/">{% trans '• коробки' %}</a></li>
+      <li><a href="/products_by_category/22/">{% trans '• ленты' %}</a></li>
+      <li><a href="/products_by_category/11/">{% trans '• листовки' %}</a></li>
+      <li><a href="/products_by_category/18/">{% trans '• наклейки' %}</a></li>
+      <li><a href="/products_by_category/20/">{% trans '• пакеты' %}</a></li>
+      <li><a href="/products_by_category/3/">{% trans '• папки' %}</a></li>
+      <li><a href="/products_by_category/7/">{% trans '• подарки' %} </a></li>
+      <li><a href="/products_by_category/25/">{% trans '• плейсметы' %}</a></li>
+      <li><a href="/products_by_category/12/">{% trans '• постеры' %}</a></li>
+      <li><a href="/products_by_category/17/">{% trans '• приглашения' %}</a></li>
+      <li><a href="/products_by_category/14/">{% trans '• ролл апы' %}</a></li>
+      <li><a href="/products_by_category/15/">{% trans '• этикетки' %}</a></li>
    
     
 
