--- a/products/templates/products/calc.html
+++ b/products/templates/products/calc.html
@@ -65,7 +65,25 @@
 
 {% endthumbnail %}
 
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'и, наконец, попадаем на страничку с расчётом, где нам останется только ввести тираж, выбрать один из параметров  и посмотреть результат расчёта' %}  <br>  </h5></span>
+<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans ' попадаем на страничку с расчётом, где нам останется только ввести тираж, выбрать один из параметров  и посмотреть результат расчёта' %}  <br>  </h5></span>
+
+
+
+
+<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'у вас исчезнет введенное значение тиража, не волнуйтесь' %}</h5>
+         
+<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans ' значение тиража не слетает, результат выводится на экран  в строке  зеленым цветом, а поле ввода обнуляется для следующего расчёта' %} </h5>
+   
+<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'вы вводите один тираж, а на экране выводится другой,' %} </h5>
+  
+<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'всё нормально, алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального ' %}</h5>
+      
+
+
+
+
+
+
 
 
 
