--- a/products/templates/products/hmo.html
+++ b/products/templates/products/hmo.html
@@ -29,14 +29,13 @@
 
         <h3><p class="text-left" > 
     
-          <p>•   {% trans 'До печати мы проверяем техническую корректность файлов, а после отправляем на подпись, проверенный файл в формате pdf' %}
-          <p>•{% trans '	В работе мы используем самое передовое полиграфическое оборудование немецкой фирмы HEIDELBERG.'%}
-              <p>•{% trans '	При печати специальными приборами в автоматическом режиме мы контролируем плотность краски, раскат краски по бумаге, сведение полиграфических крестов.'%}
-                  <p>•	{% trans 'На каждом этапе производства (во время печати и на финишных этапах обработки и отделки) мастер отслеживает качество работ.'%}
-                      <p>•{% trans '	Мы ориентированы на конечный качественный результат.</p>' %}
       
- 
-    
+            <p>• {% trans 'Для расчета вам нужно в поле тираж ввести нужное количество экземпляров и нажать кнопку рассчитать.' %}
+                <p>•{% trans 'В таблице внизу появятся параметры расчета,сроки производства и цена.' %}
+                       <p>•{% trans 'Таким образом,  из сотен готовых решений вы выбирте нужное вам и мгновенно получите техническое задание и расчет цены.'%}
+                            <p>•{% trans 'Введенное значение тиража исчезнет. Не пугайтесь, оно появится в табличке внизу, а ячейка обнулится для следующего расчета.' %}
+                                <p>•{% trans 'Алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального.'%}
+     
         {% for product in filter.qs %}
       
       <!-- <div class="tile__body list-default__parent"> -->
