--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -45,7 +45,7 @@
 
 
 
-
+<br>
 
 <ul id="menu">
 
@@ -160,7 +160,7 @@
  
    
 
-   <a data-role="button" data-inline="true" href="calc.html"> 
+   <a data-role="button" data-inline="true" href="hmo.html"> 
       <div class="col-sm">
       <h5 style="color:rgb(0, 0, 0)" class="card-title"> <i class="fas fa-calculator"></i> 
       <h5  style="color:rgb(36, 163, 60)" class="card-title"> {% trans 'мгновенный расчёт' %} </h5></span>   
