--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -26,7 +26,7 @@
        <!--  <a class="nav-link" href="/layout.html">дизайн</a>-->
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="/hmo.html/"><i class="fas fa-file"></i> {% trans 'как сделать заказ' %}</a>
+        <a class="nav-link active" href="/calc.html/"><i class="fas fa-file"></i> {% trans 'как сделать заказ' %}</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/"></a>
