--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -12,11 +12,25 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-     
+
+
+      <li class="nav-item">
+        <a class="nav-link" href="/"><strong>СЕРВИС РАБОТАЕТ В ТЕСТОВОМ РЕЖИМЕ!</strong></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/"></a>
+      </li>
+      
       <li {% if request.path == 'contact' %}class="nav-item active"{% else %}class="nav-item"{% endif %}>
         <a class="nav-link active" href="/about.html/"><strong>{% trans 'о нас' %}</strong> <span class="sr-only">(current)</span></a>
       </li>
-      
+    
 
 <!-- 
       <li class="nav-item">
