--- a/products/templates/products/about.html
+++ b/products/templates/products/about.html
@@ -30,7 +30,7 @@
          
         
             <h1><div class="blog">
-              <h3 class="text-left">{% trans 'Приветствуем Вас, друзья!' %}</h3>
+              <h3 class="text-center">{% trans 'Приветствуем Вас, друзья!' %}</h3>
               <br>
              
            
@@ -38,55 +38,23 @@
                 <H4 STYLE="font-family: 'avenir next rounded std'"><img align="center" 
                 <br> <br>
 
-                <h3><p class="text-left" >  {% trans 'мы создали этот сервис' %}    {% trans 'для выбора продуктов из готовых проектов' %}   {% trans 'или создания новых вместе с консультантом' %}</p>
+                <h3><p class="text-center" >  {% trans 'мы создали этот сервис' %}    {% trans 'для выбора продуктов из готовых проектов' %}   {% trans 'или создания новых вместе с консультантом' %}</p>
 
 <br><br>
-                <h3><p class="text-center" style="color:rgb(229, 152, 147)"> {% trans 'После этого  за 60 cекунд ' %}
+                <h3><p class="text-center" style="color:rgb(229, 152, 147)"> {% trans 'Вы сможете  за 60 cекунд ' %}
 
  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="68" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
     <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
     <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
   </svg>  
-  {% trans 'найти лучшее полиграфическое решение' %} •	{% trans 'узнать цену  и заказать то, что вам нужно' %}
+  {% trans 'найти готовое полиграфическое решение' %} •	{% trans 'узнать цену  и заказать то, что вам нужно' %}
  </h3>
-      
+
+
+<br>
+<h3 class="text-center">{% trans 'сейчас сервис работает в тестовом режиме!' %}</h3>
 </div>
-<h4><p style="color:rgb(229, 152, 147)">{% trans 'Что делать пользователю?' %}</p></h4>
-<br>
-<h5>
-  <p>* {% trans 'при необходимости воспользоваться поддержкой оператора' %}
-<p>* {% trans 'выбрать понравившееся изображение' %}
-    <p>* {% trans 'ввести тираж' %}
-        <p> * {% trans 'нажать на кнопку заказать' %}
 
-       <h5 class="text-left">
-           <h4><p style="color:rgb(229, 152, 147)">{% trans 'Как это работает?' %}</p></h4>
-           <br>
-       <H5 STYLE="font-family: 'avenir next rounded std'">
-        
-        {% trans 'Мы каталогизировали все по категориям, в подкатегориях разделили все на разные изделия,визуализировали изделия и вставили калькулятор,описали технические параметры,научили робота всем эти пользоваться.' %}<p>
-        
-
-<br>
-<br>
-
-<H5 STYLE="font-family: 'avenir next rounded std'">
-
-    <h5 class="text-left">
-        <h4><p style="color:rgb(229, 152, 147)">{% trans 'Что умеет и будет делать робот?' %}</p></h4>
-        <br>
-    <H5 STYLE="font-family: 'avenir next rounded std'">
-      {% trans 'предложит оптимальный результат, перебрав множество вариантов' %}  
-                    </h5>
-                    <H5 STYLE="font-family: 'avenir next rounded std'">
-                      <br>
-                        <h5 class="text-left">
-                            <h4><p style="color:rgb(229, 152, 147)">{% trans 'Что дальше?' %}</p></h4>
-                            <br>
-                        <H5 STYLE="font-family: 'avenir next rounded std'">
-                          {% trans 'мы планируем и дальше:<br><br><p>находить самые удачные решения, <p>делиться ими, <p>общаться с вами, <p>получать удовлетворение и удовольствие,<p>а также автоматизировать разделы доставка и дизайн</p>' %}    
-        </h5>
-   
 
       <div class="row">
        
