--- a/products/templates/products/calc.html
+++ b/products/templates/products/calc.html
@@ -70,11 +70,11 @@
 
 
 
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'у вас исчезнет введенное значение тиража, не волнуйтесь' %}</h5>
+<h5  style="color:rgb(115, 197, 230)"  class="text-center" class="card-title">{% trans 'у вас исчезает введенное значение тиража, не волнуйтесь' %}</h5>
          
 <h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans ' значение тиража не слетает, результат выводится на экран  в строке  зеленым цветом, а поле ввода обнуляется для следующего расчёта' %} </h5>
    
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'вы вводите один тираж, а на экране выводится другой,' %} </h5>
+<h5  style="color:rgb(115, 197, 230)"  class="text-center" class="card-title">{% trans 'вы вводите один тираж, а на экране выводится другой,' %} </h5>
   
 <h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'всё нормально, алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального ' %}</h5>
       
@@ -103,7 +103,7 @@
 
 {% endthumbnail %}  
 
-<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'заполняем адрес доставки и вписываем своё имя в ячейку Name,чтобы получить счёт на почту, указанную при регистрации' %}  <br>  </h5></span>
+<h5  style="color:rgb(36, 163, 60)" class="text-center" class="card-title">{% trans 'заполняем адрес доставки и вписываем своё имя в ячейку Name,чтобы получить коммерческое предложение на почту, указанную при регистрации' %}  <br>  </h5></span>
 
  
 
