--- a/products/templates/products/rest.html
+++ b/products/templates/products/rest.html
@@ -74,22 +74,21 @@
 
 <div class="container">
   <div class="row padded">
- 
- 
-     <div class="col-lg-8 col-md-6 col-sm-12 col-xs-12">
-       <div class="block2">  <div class="col-md-7 "><div class="top-cover center-block"></div><p class="top-name center-block text-center"> 
+    <center>
+ <div class="div"> <h5 class="text-left">
 
-        <h5><p 
+  <br><p>•{% 	trans 'Выбираем нужный продукт, добавляем в корзину, выставляем счет' %}
+    <br>
+    <center>  <p style="color:rgb(236, 81, 19)">{% 	trans 'или' %} </center>
+   
         <br><p>•{% 	trans 'Вы  задаете нам вопросы,' %}
             <p>•{% 	trans 'Мы вместе уточняем детали, сразу подбираем решение,' %}	
                 <p>•	{% 	trans 'На нашем сайте находим все интересующие вас полиграфические позиции,' %}
-                    <p>•	  {% 	trans 'Мгновенно определяем тираж, цену и сроки производства.' %}    <br> <br>
+                    <p>•	  {% 	trans 'Мгновенно определяем тираж, цену и сроки производства.' %}  </center>  <br> <br>
                     </div>
      </div>
+  
     </div>
-   
-
-
      
 
 
