--- a/products/templates/products/about.html
+++ b/products/templates/products/about.html
@@ -29,7 +29,7 @@
 
          
         
-            <h1><div class="blog">
+            <div class="blog">
               <h3 class="text-center">{% trans 'Приветствуем Вас, друзья!' %}</h3>
               <br>
              
