--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -1,4 +1,19 @@
 
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+  m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+  ym(82675891, "init", {
+       clickmap:true,
+       trackLinks:true,
+       accurateTrackBounce:true,
+       webvisor:true
+  });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/82675891" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 {% load static %}
 {% load thumbnail %}
@@ -20,7 +35,10 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
   <title>005 PRINT</title>
-  <style>
+ 
+ <!--
+ 
+ <style>
   	.card{
   		    height: 300px;
   	}
@@ -28,7 +46,7 @@
     content: "";
     display: table;
     clear: both;
-    visibility: hidden; }
+    visibility: visible; }
   .card-product .price-new, .card-product .price {
     margin-right: 5px; }
   .card-product .price-old {
@@ -55,6 +73,9 @@
   .card-product .title {
     margin-top: 0; }
   </style>
+
+-->
+
 </head>
 <body>
 <br>
@@ -76,7 +97,7 @@
 
 </a>  
 
-
+  <!--
 
 <a href="#" class="tlg-button">
  
@@ -84,7 +105,7 @@
  
   <!-- <img src="/media/banner/tlogo.jpeg" width="45" height="45">-->
 
-</a>
+</a> 
 
 
 <!--<a href="https://t.me/print_005_bot"><i style="color:rgb(36, 163, 60)" class="fab fa-telegram"> </i></h6> </a> -->
