--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -19,7 +19,7 @@
     <article class="gallery-wrap"> 
     <div class="img-big-wrap">
        
-        {% thumbnail product.mainimage "500" as im %}
+        {% thumbnail product.mainimage "350" as im %}
         <img align="center" src="{{ im.url }}"  class="img-fluid">
     {% endthumbnail %}
  
@@ -34,9 +34,9 @@
          <span id="link"><a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-success text-uppercase"> <i class="fas fa-shopping-cart"></i> {% trans 'заказать' %}  </a></span>
         
          {% else %}
-         <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">{% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6>
+        <!--    <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">{% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6> -->
         
-  
+        <p style="color:rgb(229, 152, 147)"><a href="/register.html"> <p style="color:rgb(229, 152, 147)"> {% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6> 
          {% endif %}
     
         </center>
@@ -78,6 +78,8 @@
     <div onmouseover="this.style.color='green';" onmouseout="this.style.color='black';">{{product.detail_text }}</div>
  
 </ul>
+<p style="color:rgb(229, 152, 147)"> минимальный тираж-{{product.lim1}}; максимальный тираж- {{product.lim2}}</p></td>
+
 
    <!-- <h6 class="title mb-3">{{product.detail_text }}</h3> -->
 <div class="container-fluid">
@@ -110,19 +112,36 @@
             
            
         </div> 
+
+                
+<p><a href="javascript:flipflop('animals');">{% trans 'у вас исчезает введенное значение тиража?' %}</a></p> 
+         
+<ul id="animals" style="display: none;">
+  <li><div id="browse_app">
+
+    {% trans ' значение тиража не слетает, результат выводится в таблице ниже  зеленым цветом, а поле ввода обнуляется для следующего расчёта' %}
+   
+
+</li>
+
+
   
 <!--</div>  подчеркивание на всю страницу --> 
 
 <hr />
-<ul>
- <input type="submit" class= "btn btn-secondary btn-buy" value="{% trans 'Рассчитать' %}" />
+
+ 
 
 </ul>
 <html>
   
    <head>
 
+    <center>
 
+    <input type="submit" class= "btn btn-secondary btn-buy" value="{% trans 'Рассчитать' %}" />
+
+</center>
   
     <div class="container-fluid">
         <table class="table table-striped table-sm" id="my_products">  
@@ -137,8 +156,9 @@
                 </tr>
             </thead>
             <tbody>
-               
-    
+
+
+
     <!--
               
     
@@ -151,16 +171,19 @@
             
     
             </tr>   -->
+
     
             <tr>
+
                 <td><p  style="color:rgb(36, 163, 60)">{{product.box_size}}</p></td>
                 <td><p  style="color:rgb(36, 163, 60)">{{product.timeplus}}</p></td>
                 <td><p style="color:rgb(36, 163, 60)">{{product.tirazh}}</p></td>
                 <td><p style="color:rgb(36, 163, 60)">{{product.calc}}</p></td>
             
-    
+
             </tr>
     
+            
     
             </tbody>
   <!--     </table>   --> 
@@ -203,7 +226,7 @@
 
            
            
-        
+           <!--
         
          <p><a href="javascript:flipflop('animals');">{% trans 'у вас исчезает введенное значение тиража?' %}</a></p> 
          
@@ -218,7 +241,7 @@
           </ul>
 
 
-       
+    
 
             <li>
    
@@ -236,14 +259,14 @@
              </ul>
 
          
-         
+         -->
 
    </body>
 
 </html>
 
 
-  
+
   
        {% endfor %}
         </tbody>
