--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -67,6 +67,7 @@
 					 <h5 class="card-title"><a href="/product/{{ product.slug }}"><p style="color:rgb(36, 163, 60)">{{ product.name }}></p></a></h5>  
 				
 				 <h6 class="card-title"><span class="text-muted">   {{ product.preview_text}} </span></a></h6>
+				 <center>	<span class="price-new">от  {{product.minprice}} руб.</span> </center>
 				  
 						 <p class="card-text">
 				
@@ -79,7 +80,8 @@
 <!--             <a href="remove/{{ product.slug }}" class="btn btn-danger btn-sm"> Remove</a>
  -->						<!-- price-wrap.// -->
 						 <div class="price-wrap h5">
-							<!-- <span class="price-new">руб. {{product.price}}</span>-->
+						<!-- 	<p style="color:rgb(229, 152, 147)">от<br>{{product.minprice}}<br>₽</p> -->
+						
 							<!-- <del class="price-old">руб. 1980</del>-->
 						</div> 
 					</div> <!-- action-wrap -->
