--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -30,9 +30,9 @@
 
     {% if request.user.is_authenticated %}
     
-  
+  <center>
        <span id="link"><a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-success text-uppercase"> <i class="fas fa-shopping-cart"></i> {% trans 'заказать' %}  </a></span> 
-        
+ </center>    
          {% else %}
         <!--    <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">{% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6> -->
         
@@ -78,23 +78,15 @@
     <div onmouseover="this.style.color='green';" onmouseout="this.style.color='black';">{{product.detail_text }}</div>
  
 </ul>
-<p style="color:rgb(229, 152, 147)"> минимальный тираж-{{product.lim1}}; максимальный тираж- {{product.lim2}}</p></td>
-
-<p id="demo"></p>
-
-<script>
-a = {{product.lim1}} 
-b = {{product.boxsize.b}}
-h = {{boxsize.minprice}
-d = {{product.boxsize.d}} 
-
-document.getElementById("demo").innerHTML = h;
-</script>
+<p style="color:rgb(229, 152, 147)">  {% trans 'мин.тираж' %}- {{product.lim1}} {% trans 'шт.' %}.(<span class="price-new">{{product.maxprice}} ₽/{% trans 'шт.' %}.); {% trans 'мaкс.тираж' %}- {{product.lim2}} {% trans 'шт.' %} ({{product.minprice}} ₽/{% trans 'шт.' %})</span></p></td>
 
 
+ <!--
 
-
-   <!-- <h6 class="title mb-3">{{product.detail_text }}</h3> -->
+<center><p style="color:rgb(229, 152, 147)"> 	<span class="price-new">от<br>₽ {{product.minprice}}</span> <span class="price-new"> до<br>₽ {{product.maxprice}}</span></center>
+-->
+<br> 
+   <h6 class="title mb-3">{{product.detail_text }}</h3> 
 <div class="container-fluid">
     <form id="product-form">
         <div class="row">
@@ -126,7 +118,7 @@ document.getElementById("demo").innerHTML = h;
            
         </div> 
 
-                
+  <!--           
 <p><a href="javascript:flipflop('animals');">{% trans 'у вас исчезает введенное значение тиража?' %}</a></p> 
          
 <ul id="animals" style="display: none;">
@@ -136,8 +128,7 @@ document.getElementById("demo").innerHTML = h;
    
 
 </li>
-
-
+-->   
   
 <!--</div>  подчеркивание на всю страницу --> 
 
@@ -149,13 +140,15 @@ document.getElementById("demo").innerHTML = h;
 <html>
   
    <head>
-
+ 
    
 <center>
     <input type="submit" class= "btn btn-secondary btn-buy" value="{% trans 'Рассчитать' %}" />
-
 </center>
-  
+
+
+
+<!--<a href="/products_details1.html/" class="link-secondary">S</a>-->
     <div class="container-fluid">
         <table class="table table-striped table-sm" id="my_products">  
             <thead>
@@ -171,7 +164,7 @@ document.getElementById("demo").innerHTML = h;
             <tbody>
 
 
-
+               
     <!--
               
     
@@ -238,8 +231,8 @@ document.getElementById("demo").innerHTML = h;
         
 
            
-           
-           <!--
+           <br>
+     
         
          <p><a href="javascript:flipflop('animals');">{% trans 'у вас исчезает введенное значение тиража?' %}</a></p> 
          
@@ -249,30 +242,29 @@ document.getElementById("demo").innerHTML = h;
                 {% trans ' значение тиража не слетает, результат выводится на экран  в строке  зеленым цветом, а поле ввода обнуляется для следующего расчёта' %}
                
        
-         </li>
+  
 
           </ul>
 
 
     
 
-            <li>
    
-               <p><a href="javascript:flipflop('an');"><p style="color:rgb(36, 163, 60)"></p>  {% trans 'вы вводите один тираж, а на экране выводится другой?' %} </a></p> 
+               <p><a href="javascript:flipflop('an');"><p style="color:rgb(36, 163, 60)">  {% trans 'вы вводите один тираж, а на экране выводится другой?' %} </a></p> 
               
                <ul id="an" style="display: none;">
-                 <li><div id="browse_app">
+                 <div id="browse_app">
 
                     
                     {% trans 'Всё нормально, алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального ' %}
                   
           
-            </li>
+   
    
              </ul>
 
          
-         -->
+      
 
    </body>
 
