--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -32,7 +32,7 @@
     
   <center>
        <span id="link"><a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-success text-uppercase"> <i class="fas fa-shopping-cart"></i> {% trans 'заказать' %}  </a></span> 
- </center>    
+    </center>     
          {% else %}
         <!--    <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">{% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6> -->
         
@@ -78,15 +78,22 @@
     <div onmouseover="this.style.color='green';" onmouseout="this.style.color='black';">{{product.detail_text }}</div>
  
 </ul>
-<p style="color:rgb(229, 152, 147)">  {% trans 'мин.тираж' %}- {{product.lim1}} {% trans 'шт.' %}.(<span class="price-new">{{product.maxprice}} ₽/{% trans 'шт.' %}.); {% trans 'мaкс.тираж' %}- {{product.lim2}} {% trans 'шт.' %} ({{product.minprice}} ₽/{% trans 'шт.' %})</span></p></td>
+
+<p id="demo"></p>
+
+<script>
+a = {{product.lim1}} 
+b = {{product.boxsize.b}}
+h = {{boxsize.minprice}
+d = {{product.boxsize.d}} 
+
+document.getElementById("demo").innerHTML = a;
+</script>
+
+<p style="color:rgb(229, 152, 147)">  {% trans 'мин.тираж' %}- {{product.lim1}} {% trans 'шт.' %}.(<span class="price-new">{{product.maxprice}} ₽/шт.); {% trans 'мaкс.тираж' %}- {{product.lim2}} шт. ({{product.minprice}} ₽/шт.)</span></p></td>
 
 
- <!--
-
-<center><p style="color:rgb(229, 152, 147)"> 	<span class="price-new">от<br>₽ {{product.minprice}}</span> <span class="price-new"> до<br>₽ {{product.maxprice}}</span></center>
--->
-<br> 
-   <h6 class="title mb-3">{{product.detail_text }}</h3> 
+   <!-- <h6 class="title mb-3">{{product.detail_text }}</h3> -->
 <div class="container-fluid">
     <form id="product-form">
         <div class="row">
@@ -118,7 +125,7 @@
            
         </div> 
 
-  <!--           
+                
 <p><a href="javascript:flipflop('animals');">{% trans 'у вас исчезает введенное значение тиража?' %}</a></p> 
          
 <ul id="animals" style="display: none;">
@@ -128,7 +135,8 @@
    
 
 </li>
--->   
+
+
   
 <!--</div>  подчеркивание на всю страницу --> 
 
@@ -140,15 +148,13 @@
 <html>
   
    <head>
- 
+
    
-<center>
+    <center>
     <input type="submit" class= "btn btn-secondary btn-buy" value="{% trans 'Рассчитать' %}" />
-</center>
 
-
-
-<!--<a href="/products_details1.html/" class="link-secondary">S</a>-->
+    <center>
+  
     <div class="container-fluid">
         <table class="table table-striped table-sm" id="my_products">  
             <thead>
@@ -164,7 +170,7 @@
             <tbody>
 
 
-               
+
     <!--
               
     
@@ -231,8 +237,8 @@
         
 
            
-           <br>
-     
+           
+           <!--
         
          <p><a href="javascript:flipflop('animals');">{% trans 'у вас исчезает введенное значение тиража?' %}</a></p> 
          
@@ -242,29 +248,30 @@
                 {% trans ' значение тиража не слетает, результат выводится на экран  в строке  зеленым цветом, а поле ввода обнуляется для следующего расчёта' %}
                
        
-  
+         </li>
 
           </ul>
 
 
     
 
+            <li>
    
-               <p><a href="javascript:flipflop('an');"><p style="color:rgb(36, 163, 60)">  {% trans 'вы вводите один тираж, а на экране выводится другой?' %} </a></p> 
+               <p><a href="javascript:flipflop('an');"><p style="color:rgb(36, 163, 60)"></p>  {% trans 'вы вводите один тираж, а на экране выводится другой?' %} </a></p> 
               
                <ul id="an" style="display: none;">
-                 <div id="browse_app">
+                 <li><div id="browse_app">
 
                     
                     {% trans 'Всё нормально, алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального ' %}
                   
           
-   
+            </li>
    
              </ul>
 
          
-      
+         -->
 
    </body>
 
